--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
 <h1>This is the home page!</h1>
+
+<%= link_to 'See a list of articles', articles_path %> |
+<%= link_to 'Read about this site', about_path %>
