--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,19 @@
-<h1>This is the home page!</h1>
+<main role="main" id="page-content" class="flex-shrink-0">
 
-<%= link_to 'See a list of articles', articles_path %> |
-<%= link_to 'Read about this site', about_path %>
+	<div class="container" id="home-container">
+		<div class="jumbotron text-center mt-1">
+			<h1 class=>Alpha Blog</h1>
+			<p class="lead text-white">This is an example blog written in Rails 6</p>
+
+			<a class="btn btn-lg btn-success my-4" href="" role="button">Sign Up</a>
+
+			<p class="my-6 text-success">Sign up to read articles!</p>
+		</div>
+	</div>
+</main>
+<footer id="sticky-footer" class="bg-dark py-3 ">
+  <div class="container text-center text-white">
+		<small><span class="text-muted">Copyright &copy; <%= link_to "Laurie Roy", 
+			"https://laurieroy.github.io", class: "text-white" %></span></small>
+  </div>
+</footer>
