--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Create a new article</h1>
+<div id="page-content">
+	<h1 class="text-center  mt-4">Create a new article</h1>
+	<%= render 'form' %>
 
-<%= render 'form' %>
+</div>
 
-<%= link_to 'Return to Articles List', articles_path %>
+
