--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,27 +1,20 @@
 <div class="container">
-	<% if @article.errors.any? %>
-		<h2>The following errors prevented the article from being saved: </h2>
-		<ul>
-			<%  @article.errors.full_messages.each do |msg| %>
-				<li><%= msg %></li>
-			<% end %>
-		</ul>
-	<% end %>
 	<div class="row justify-content-center">
 		<div class="col-10">
+			<%= render 'shared/errors' %>
 			<%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded text-light", local: true) do |f| %>
 				<div class="form-group row">
 						<%= f.label :title, class: "col-2 col-form-label text-white" %>
 					<div class="col-10">
-						<%= f.text_field :title, class:"form-control shadow rounded",
+						<%= f.text_field :title, class:"form-control",
 							placeholder: "Title of Article" %>
 					</div>
 				</div>
 				<div class="form-group row">
 					<%= f.label :description, class: "col-2 col-form-label text-white" %>
 					<div class="col-10">
-						<%= f.text_area :description, rows: 10, class:"form-control text-light",
-						placeholder: "Description of Article" %>
+						<%= f.text_area :description, rows: 10, class:"form-control shadow rounded",
+							placeholder: "Description of Article" %>
 					</div>
 				</div>
 
