--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,9 +1,21 @@
-<h1>Showing article details</h1>
-
-<p><strong>Title: </strong><%=@article.title %></p>
-<p><strong>Desciption: </strong><%=@article.description %></p>
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Delete', article_path(@article), method: :delete,
-	data: { confirm: "Are you sure?"} %> |
-<%= link_to 'Articles List', articles_path %>
+	<h2 class="text-center  mt-4"><%= @article.title %></h2>
+	<div class="container">
+		<div class="row justify-content-md-center">
+			<div class="col-8 mt-4">
+				<div class="card shadow mb-5 bg-white rounded text-center">
+					<div class="card-header font-italic">
+						by Laurie Roy
+					</div>
+					<div class="card-body">
+						<div class="card-text text-left"><%= simple_format(@article.description) %></div>
+						<%= link_to 'Edit', edit_article_path(@article), class:"btn btn-outline-info" %></a>
+						<%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger" %></a>
+					</div>
+					<div class="card-footer text-muted">
+						<small>Created <%= time_ago_in_words(@article.created_at) %> ago,
+						edited <%= time_ago_in_words(@article.updated_at) %> ago</small>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
