--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,4 @@
-<main role="main" id="page-content" class="flex-shrink-0">
-
+<%# <main role="main" class="flex-shrink-0"> %>
 	<div class="container" id="home-container">
 		<div class="jumbotron text-center mt-1">
 			<h1 class=>Alpha Blog</h1>
@@ -8,10 +7,4 @@
 			<p class="my-6 text-success">Sign up to read articles!</p>
 		</div>
 	</div>
-</main>
-<footer id="sticky-footer" class="bg-dark py-3 ">
-  <div class="container text-center text-white">
-		<small><span class="text-muted">Copyright &copy; <%= link_to "Laurie Roy", 
-			"https://laurieroy.github.io", class: "text-white" %></span></small>
-  </div>
-</footer>
+<%# </main> %>
