--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,7 +6,7 @@
 				<div class="col-8 mt-4">
 					<div class="card shadow mb-5 bg-white rounded text-center">
 						<div class="card-header font-italic">
-							by Laurie Roy
+							by <%= article.user.username if article.user %>
 						</div>
 						<div class="card-body">
 							<h5 class="card-title"><td><%= link_to article.title, article_path(article) %></td></h5>
