--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
 			<div class="col-8 mt-4">
 				<div class="card shadow mb-5 bg-white rounded text-center">
 					<div class="card-header font-italic">
-						by Laurie Roy
+						by <%= @article.user.username if @article.user %>
 					</div>
 					<div class="card-body">
 						<div class="card-text text-left"><%= simple_format(@article.description) %></div>
