Add users create action; made refs to article generic

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,8 +3,7 @@
 		<div class="jumbotron text-center mt-1">
 			<h1 class=>Alpha Blog</h1>
 			<p class="lead text-white">This is an example blog written in Rails 6</p>
-			<a class="btn btn-lg btn-success my-4" href="" role="button">Sign Up</a>
+			<%= link_to "Sign Up!", signup_path, class: "btn btn-lg btn-success my-4" %>
 			<p class="my-6 text-success">Sign up to read articles!</p>
 		</div>
 	</div>
-<%# </main> %>
