Add users list, add link to author

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -19,7 +19,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Users</a>
+              <%= link_to "Bloggers", users_path, class:"nav-link" %>
             </li>
           </ul>
           <form class="form-inline mt-2 mt-md-0">
