--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -4,7 +4,9 @@
 				<div class="col-8 mt-4">
 					<div class="card shadow mb-5 bg-white rounded text-center">
 						<div class="card-header font-italic">
-							by <%= article.user.username if article.user %>
+						<% if article.user %>
+							by <%= link_to article.user.username, user_path(article.user)  %>
+							<% end %>
 						</div>
 						<div class="card-body">
 							<h5 class="card-title"><td><%= link_to article.title, article_path(article) %></td></h5>
