--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,10 @@
 			<div class="col-8 mt-4">
 				<div class="card shadow mb-5 bg-white rounded text-center">
 					<div class="card-header font-italic">
-						by <%= @article.user.username if @article.user %>
+						<% if @article.user %>
+							by <%= link_to @article.user.username, user_path(@article.user) %>
+							<%= link_to gravatar_for(@article.user), user_path(@article.user) %>
+							<% end %>
 					</div>
 					<div class="card-body">
 						<div class="card-text text-left"><%= simple_format(@article.description) %></div>
