--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-    <div> #fixed-top 
+    <div>
       <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <%= link_to "ALPHA BLOG", root_path, class: "navbar-brand", id: "logo" %>
         <button class="navbar-toggler" type="button" data-toggle="collapse" 
@@ -21,6 +21,22 @@
             <li class="nav-item">
               <%= link_to "Bloggers", users_path, class:"nav-link" %>
             </li>
+            <% if logged_in? %>
+              <li class="nav-item">
+                <%= link_to "#{@current_user.username}", user_path(current_user), class:"nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Log out", logout_path, class:"nav-link", method: :delete %>
+              </li>
+            <% else %>
+              <li class="nav-item">
+                <%= link_to "Log in", login_path, class:"nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Sign Up", signup_path, class:"nav-link" %>
+              </li>
+            <% end %>
+
           </ul>
           <form class="form-inline mt-2 mt-md-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
