--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -9,11 +9,14 @@
 							<% end %>
 						</div>
 						<div class="card-body">
-							<h5 class="card-title"><td><%= link_to article.title, article_path(article) %></td></h5>
-							<p class="card-text"><td><%= truncate(article.description, length: 100 ) %></td></p>
-							<%= link_to 'Show', article_path(article), class:"btn btn-outline-primary" %>
-							<%= link_to 'Edit', edit_article_path(article), class:"btn btn-outline-info" %></a>
-							<%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger" %></a>
+							<h5 class="card-title"><%= link_to article.title, article_path(article) %></h5>
+							<p class="card-text"><%= truncate(article.description, length: 100 ) %></p>
+							<%= link_to 'View', article_path(article), class:"btn btn-outline-primary" %>
+							
+							<% if logged_in? && article.user == current_user %>
+								<%= link_to 'Edit', edit_article_path(article), class:"btn btn-outline-info" %></a>
+								<%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger" %></a>
+							<% end %>
 						</div>
 						<div class="card-footer text-muted">
 							<small>Created <%= time_ago_in_words(article.created_at) %> ago,
