--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -32,7 +32,9 @@
                     class: "dropdown-item"  %>
                   <%= link_to "Edit your profile", edit_user_path(current_user),
                      class: "dropdown-item"  %>
-                  <%= link_to "Create new article", new_article_path, class: "dropdown-item"  %>
+                  <%= link_to "Delete profile", user_path(current_user),
+                    method: :delete, data: { confirm: "Are you sure?" },
+                    class: "dropdown-item text-danger"   %>
                 </div>
               </li>
               <li class="nav-item">
