--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,11 @@
 <%# <main role="main" class="flex-shrink-0"> %>
 	<div class="container" id="home-container">
 		<div class="jumbotron text-center mt-1">
-			<h1 class=>Alpha Blog</h1>
-			<p class="lead text-white">This is an example blog written in Rails 6</p>
-			<%= link_to "Sign Up!", signup_path, class: "btn btn-lg btn-success my-4" %>
-			<p class="my-6 text-success">Sign up to read articles!</p>
+			<h1>Alpha Blog</h1>
+
+			<%= link_to "Sign Up!", signup_path, class: "btn btn-lg btn-success mt-5" %>
+			<br/>	<br/>
+			<p class="lead lead-shadow text-white">This is an example blog written in Rails 6</p>
+			<p class="lead text-white">Sign up to read articles!</p>
 		</div>
 	</div>
