--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,89 +1,79 @@
 @import 'bootstrap/dist/css/bootstrap';
 
-// .navbar-brand {
-// font-size: 3rem;
-// }
+html,
+body {
+  height: 100%;
+}
 
-    // .bd-placeholder-img {
-    //   font-size: 1.125rem;
-    //   text-anchor: middle;
-    //   -webkit-user-select: none;
-    //   -moz-user-select: none;
-    //   -ms-user-select: none;
-    //   user-select: none;
-    // }
+#logo {
+  float: left;
+  font-size: 1.7em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
 
-		//     @media (min-width: 768px) {
-    //   .bd-placeholder-img-lg {
-    //     font-size: 3.5rem;
-    //   }
-    // }
+#home-container {
+  margin-top: 25px;
+}
 
-    #logo {
-    float: left;
-    font-size: 1.7em;
-    color: #fff;
-    text-transform: uppercase;
-    letter-spacing: -1px;
-    font-weight: bold;
-  }
+#page-content {
+  flex: 1 0 auto;
+  background-color: lightgrey;
+}
 
-  #home-container {
-    margin-top: 25px;
-  }
+.jumbotron {
+  background-image: asset-url('jumbo-typewriter.jpg');
+  background-position: center center;
+  background-repeat: no-repat;
+  background-size: cover;
+  height: 450px;
+}
 
-  #page-content {
-    flex: 1 0 auto;
-    background-color: lightgrey;
-  }
-  
-  .jumbotron {
-    background-image: asset-url('jumbo-typewriter.jpg');
-    background-position: center center;
-    background-repeat: no-repat;
-    background-size: cover;
-    height: 500px;
-  }
+.lead-shadow {
+  text-shadow: 1px 1px black;
+}
 
-  #sticky-footer {
-    background-color: #f5f5f5;
-    flex-shrink: none;
-  }
+#sticky-footer {
+  background-color: #f5f5f5;
+  flex-shrink: none;
+}
 
-  .footer > .container {
-    padding-right: 15px;
-    padding-left: 15px;
-  }
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
 
- // pagination styling
-  .flickr_pagination {
-  text-align: center;
-  padding: 0.3em;
-  cursor: default; }
-  .flickr_pagination a, .flickr_pagination span, .flickr_pagination em {
-    padding: 0.2em 0.5em; 
-    border-radius: 5px; 
-  }
-  .flickr_pagination .disabled {
-    color: #aaaaaa; }
-  .flickr_pagination .current {
-    font-style: normal;
-    font-weight: bold;
-    color: #ff0084; }
-  .flickr_pagination a {
-    border: 1px solid whitesmoke;
-    color: whitesmoke;
-    text-decoration: none; }
-    .flickr_pagination a:hover, .flickr_pagination a:focus {
-      border-color: gray;
-      background: whitesmoke;
-      color: gray; }
-  .flickr_pagination .page_info {
-    color: #aaaaaa;
-    padding-top: 0.8em; }
-  .flickr_pagination .previous_page, .flickr_pagination .next_page {
-    border-width: 2px; }
-  .flickr_pagination .previous_page {
-    margin-right: 1em; }
-  .flickr_pagination .next_page {
-    margin-left: 1em; }
+// pagination styling
+.flickr_pagination {
+text-align: center;
+padding: 0.3em;
+cursor: default; }
+.flickr_pagination a, .flickr_pagination span, .flickr_pagination em {
+  padding: 0.2em 0.5em; 
+  border-radius: 5px; 
+}
+.flickr_pagination .disabled {
+  color: #aaaaaa; }
+.flickr_pagination .current {
+  font-style: normal;
+  font-weight: bold;
+  color: #ff0084; }
+.flickr_pagination a {
+  border: 1px solid whitesmoke;
+  color: whitesmoke;
+  text-decoration: none; }
+  .flickr_pagination a:hover, .flickr_pagination a:focus {
+    border-color: gray;
+    background: whitesmoke;
+    color: gray; }
+.flickr_pagination .page_info {
+  color: #aaaaaa;
+  padding-top: 0.8em; }
+.flickr_pagination .previous_page, .flickr_pagination .next_page {
+  border-width: 2px; }
+.flickr_pagination .previous_page {
+  margin-right: 1em; }
+.flickr_pagination .next_page {
+  margin-left: 1em; }
