--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -19,9 +19,26 @@
                 <div class="dropdown-divider"></div>
                 <%= link_to "View all articles", articles_path, class: "dropdown-item" %>
               </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Categories
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <% if logged_in? && current_user.admin? %>
+                  <%= link_to "Create new category", new_category_path, class: "dropdown-item" %>
+                <% end %>  
+                  <%= link_to "View your categories", categories_path, class: "dropdown-item" %>
+                
+                <%# <div class="dropdown-divider"></div> %>
+                <%# <%= link_to "Category Metrics", ?metrics_categories_path, class: "dropdown-item" %> 
+              </div>
+            </li>
+
             <li class="nav-item">
               <%= link_to "Bloggers", users_path, class:"nav-link" %>
             </li>
+            
             <% if logged_in? %>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
