--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -4,16 +4,26 @@
 			<%= render 'shared/errors', obj: @article %>
 			<%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded text-light", local: true) do |f| %>
 				<div class="form-group row">
-						<%= f.label :title, class: "col-2 col-form-label text-white" %>
+						<%= f.label :title, "Title:", class: "col-2 col-form-label text-white" %>
 					<div class="col-10">
 						<%= f.text_field :title, class:"form-control",
 							placeholder: "Title of Article" %>
 					</div>
 				</div>
 				<div class="form-group row">
-					<%= f.label :description, class: "col-2 col-form-label text-white" %>
+					<%= f.label :description, "Description:", class: "col-2 col-form-label text-white" %>
 					<div class="col-10">
 						<%= f.text_area :description, rows: 10, class:"form-control shadow rounded",
+							placeholder: "Description of Article" %>
+					</div>
+				</div>
+				<div class="form-group row">
+					<%= f.label :category, "Category: (optional)", class: "col-2 col-form-label text-white" %>
+					<div class="col-10">
+						<%= f.collection_select(:category_ids, Category.all, :id, :name,
+							{ prompt: "Make your selection from the list below: (ctl+click for multiple)" },
+							{ multiple: true, size: 3, class: "custom-select shadow rounded" } ) %>
+						<%# <%= f.text_area :description, rows: 10, class:"form-control shadow rounded",
 							placeholder: "Description of Article" %>
 					</div>
 				</div>
