--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,7 +7,10 @@
 						<% if @article.user %>
 							by <%= link_to @article.user.username, user_path(@article.user) %>
 							<%= link_to gravatar_for(@article.user), user_path(@article.user) %>
-							<% end %>
+						<% end %>
+						<% if @article.categories.any? %>
+							<div class="mt-2"><%= render @article.categories %></div>
+						<% end %>
 					</div>
 					<div class="card-body">
 						<div class="card-text text-left"><%= simple_format(@article.description) %></div>
