--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -2,21 +2,8 @@
 <div class="container">
 	<div class="row justify-content-center">
 		<div class="col-10">
-			<%= render 'shared/errors', obj: @category %>
-			<%= form_with(model: @category , class: "shadow p-3 mb-3 bg-info rounded text-light", local: true) do |f| %>
-				<div class="form-group row">
-						<%= f.label :name, "Category name:", class: "col-2 col-form-label text-white" %>
-					<div class="col-10">
-						<%= f.text_field :name, class:"form-control",
-							placeholder: "Enter category name" %>
-					</div>
-				</div>
-
-				<div class="form-group row justify-content-center">
-					<%= f.submit class: "btn btn-outline-light btn-lg" %>
-				</div>
-			<% end %>
+			<%= render 'form' %>
 		</div>
-		<%= link_to '[ Cancel and Return to Articles List ]', articles_path, class: "text-info" %>
+		<%= link_to '[ Cancel and Return to Categories List ]', categories_path, class: "text-info" %>
 	</div>
 </div>
